# async_rust_tui

./: .gitignore  Cargo.toml  apikey.html  server.py
.cargo/: config.toml
.devcontainer/: devcontainer.json  gitconfig.sh  slides-server.sh
.scripts/: slides-server.sh
slides/templates/: async_rust_tui.html
sncf/: Cargo.toml
sncf/examples/: usage.rs
sncf/src/: client.rs  fake.rs  lib.rs
src/: app.rs  events.rs  lib.rs  main.rs  ui.rs
src/snapshots/: async_rust_tui__ui__tests__input_start_screen.snap  async_rust_tui__ui__tests__timer_screen.snap  async_rust_tui__ui__tests__timer_screen_value.snap
