[package]
name = "async_rust_tui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sncf"]

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "env-filter",
] }
tracing-appender = "0.2.4"

# A dep is missing


[dev-dependencies]
pretty_assertions = "1.4.1"
