[package]
name = "async_rust_tui"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sncf"]

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
sncf = { path = "sncf" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "registry",
  "env-filter",
] }
tracing-appender = "0.2.4"
tokio = { version = "1.48.0", features = ["full"] }

ratatui = "0.30.0"
crossterm = "0.29.0"

serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"

jiff = "0.2.17"

tui-big-text = "0.8.1"
notify-rust = "4.11.7"

[dev-dependencies]
insta = "1.46.0"
pretty_assertions = "1.4.1"
