[package]
name = "sncf"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
jiff = "0.2.17"
thiserror = "2.0.17"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
